# expense_tool_portfolio_v2

./: .gitignore  CHANGELOG.md  README.md  app.py  excel_export.py  expense_core.py  expense_tool.py  html_report.py  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt  rules.json  rules.py  rules.sample.json
.github/workflows/: ci.yml
data/: sample_bad.csv  sample_good.csv
tests/: test_core.py
